chore: Update environment variables logic

--- a/configs/app_config_pprd.json
+++ b/configs/app_config_pprd.json
@@ -1,4 +1,4 @@
 {
-    "appName": "BLoC template PPRD"
-
+    "appName": "BLoC template PPRD",
+    "apiBaseUrl": "https://jsonplaceholder.typicode.com"
 }
