--- a/configs/app_config_production.json
+++ b/configs/app_config_production.json
@@ -1,3 +1,4 @@
 {
-    "appName": "BLoC template PROD"
+    "appName": "BLoC template PROD",
+    "apiBaseUrl": "https://jsonplaceholder.typicode.com"
 }
