--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutter_bloc_template
-description: A new Flutter project.
+description: A Flutter template for Bloc pattern.
 publish_to: "none"
 version: 0.1.0
 
@@ -7,12 +7,11 @@ environment:
   sdk: ">=3.1.1 <4.0.0"
 
 dependencies:
-  get_it: ^7.2.0
-  flutter_bloc: ^8.1.2
+  get_it: ^7.6.4
+  flutter_bloc: ^8.1.3
   flutter_localizations:
     sdk: flutter
   intl: ^0.18.1
-
   flutter:
     sdk: flutter
   http: ^1.1.2
@@ -20,7 +19,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 flutter:
   uses-material-design: true
