--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
-    "dart.flutterSdkPaths": [
-        ".fvm/flutter_sdk",
-    ],
-    "dart.flutterSdkPath": ".fvm/flutter_sdk",
+  "dart.flutterSdkPaths": [
+    ".fvm/flutter_sdk"
+  ],
+  "dart.flutterSdkPath": ".fvm/versions/3.24.4"
 }
